--- a/app/includes/_main.html
+++ b/app/includes/_main.html
@@ -1,2 +1,135 @@
 
-<main class="main"></main>
+<main class="main">
+  <div class="first-box">
+    <div class="container">
+      <div class="row">
+        <div class="col-md"></div>
+        <div class="col-12 col-md-10">
+          <div class="row">
+            <div class="col-12">
+              <h3 class="title-first">INTELLECTUAL CYBER WEB TECHNOLOGY</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h1 class="title-second">Turning Ads Into The Profit</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <p class="text">ICWT – a high-quality advertising network for shortly reaching commercial success.<br> Only credible ad formats supplemented by wide customization features create<br> ample opportunities for running an effective advertising campaign.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 buttons">
+              <input class="button_monetize" type="submit" value="MONETIZE"/>
+              <input class="button_ADVERTIZE" type="submit" value="ADVERTIZE"/>
+            </div>
+          </div>
+        </div>
+        <div class="col-md"></div>
+      </div>
+    </div>
+  </div>
+  <div class="second-box">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="second-box__title">Our Features</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-3 second-box__first-stick">
+          <div class="blue-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-01.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">COST<br> PER MILLE</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">Up-to-date pricing model which allows advertisers to fairly evaluate the effectiveness of a particular ad</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 second-box__second-stick">
+          <div class="green-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-02.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">ADVANCED <br>TARGETING</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">Reach the right audience at the right time and place to become the main focus of their attention</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 second-box__third-stick">
+          <div class="blue-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-03.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">REAL-TIME <br>DETAILED STATISTICS</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">Flexible statistic data which displays only relevant information about your ad promotion progress</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 second-box__fourth-stick">
+          <div class="green-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-04.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">24 / 7 QUALIFIED <br>SUPPORT</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">Informational assistance from professional consultants is available round the clock</p>
+          </div>
+        </div>
+      </div>
+      <div class="row second-box__margin-next-row">
+        <div class="col-12 col-md-3 second-box__fifth-stick">
+          <div class="green-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-05.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">ADVERTISING NETWORKS<br> ROTATION</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">We match the advertisers’ offers with the customers’ demand and create the potential clients</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 second-box__sixth-stick">
+          <div class="blue-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-06.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">COMPETITIVELY <br>LOW FEES</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">Reasonable fee rate enables us to provide high-quality service and still remain favorable for our clients</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 second-box__seventh-stick">
+          <div class="green-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-07.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">ADS<br> CUSTOMIZATION</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">The wide range of features for ads customization helps to fit your message into the website page</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 second-box__eighth-stick">
+          <div class="blue-stick__img-box d-flex align-items-center justify-content-center"><img src="img/icon-08.svg" alt=""/></div>
+          <div class="first-stick__title d-flex align-items-center justify-content-center">
+            <h3 class="stick__title_style">AFFILIATE <br>PROGRAM</h3>
+          </div>
+          <div class="first-stick__text d-flex align-items-center justify-content-center">
+            <p class="stick__text_style">A partnership with ICWT is a beneficial opportunity to gain a new riskless source of income</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="third-box">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-12 col-md-6">
+          <h3 class="third-box__title">Create a free account in ICTW ADS </h3><span class="third-box__span">and run the campaign in a few minutes</span>
+        </div>
+        <div class="col-md-3"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+          <input class="third-box__button" type="submit" value="CREATE A CAMPAIGN"/>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
