--- a/app/pug/includes/_main.pug
+++ b/app/pug/includes/_main.pug
@@ -1,8 +1,97 @@
 main.main
-
-    
-
-
+    .first-box
+        .container
+            .row
+                .col-md
+                .col-12.col-md-10
+                    .row
+                        .col-12
+                            h3.title-first INTELLECTUAL CYBER WEB TECHNOLOGY
+                    .row
+                        .col-12
+                            h1.title-second Turning Ads Into The Profit
+                    .row
+                        .col-12
+                            p.text ICWT – a high-quality advertising network for shortly reaching commercial success.<br> Only credible ad formats supplemented by wide customization features create<br> ample opportunities for running an effective advertising campaign.
+                    .row
+                        .col-12.buttons
+                            input(type="submit", value="MONETIZE").button_monetize
+                            input(type="submit", value="ADVERTIZE").button_ADVERTIZE
+                .col-md
+    .second-box
+        .container
+            .row
+                .col-12
+                    h2.second-box__title Our Features
+            .row
+                .col-12.col-md-3.second-box__first-stick
+                    .blue-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-01.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style COST<br> PER MILLE
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style Up-to-date pricing model which allows advertisers to fairly evaluate the effectiveness of a particular ad
+                .col-12.col-md-3.second-box__second-stick
+                    .green-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-02.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style ADVANCED <br>TARGETING
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style Reach the right audience at the right time and place to become the main focus of their attention
+                .col-12.col-md-3.second-box__third-stick
+                    .blue-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-03.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style REAL-TIME <br>DETAILED STATISTICS
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style Flexible statistic data which displays only relevant information about your ad promotion progress
+                .col-12.col-md-3.second-box__fourth-stick
+                    .green-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-04.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style 24 / 7 QUALIFIED <br>SUPPORT
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style Informational assistance from professional consultants is available round the clock
+            .row.second-box__margin-next-row
+                .col-12.col-md-3.second-box__fifth-stick
+                    .green-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-05.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style ADVERTISING NETWORKS<br> ROTATION
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style We match the advertisers’ offers with the customers’ demand and create the potential clients
+                .col-12.col-md-3.second-box__sixth-stick
+                    .blue-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-06.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style COMPETITIVELY <br>LOW FEES
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style Reasonable fee rate enables us to provide high-quality service and still remain favorable for our clients
+                .col-12.col-md-3.second-box__seventh-stick
+                    .green-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-07.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style ADS<br> CUSTOMIZATION
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style The wide range of features for ads customization helps to fit your message into the website page
+                .col-12.col-md-3.second-box__eighth-stick
+                    .blue-stick__img-box.d-flex.align-items-center.justify-content-center
+                        img(src="img/icon-08.svg", alt="")
+                    .first-stick__title.d-flex.align-items-center.justify-content-center
+                        h3.stick__title_style AFFILIATE <br>PROGRAM
+                    .first-stick__text.d-flex.align-items-center.justify-content-center
+                        p.stick__text_style A partnership with ICWT is a beneficial opportunity to gain a new riskless source of income
+    .third-box
+        .container
+            .row
+                .col-md-3
+                .col-12.col-md-6
+                    h3.third-box__title Create a free account in ICTW ADS 
+                    span.third-box__span and run the campaign in a few minutes
+                .col-md-3
+            .row
+                .col-12.d-flex.align-items-center.justify-content-center
+                    input(type="submit", value="CREATE A CAMPAIGN").third-box__button
 
 
     
