--- a/app/pug/includes/_head.pug
+++ b/app/pug/includes/_head.pug
@@ -11,6 +11,8 @@ head
 	link(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet")
 	link(rel="stylesheet", type="text/css", href="css/style.css")
 	link(href="img/favicon.png" rel="shortcut icon" type="image/x-icon")
+	link(href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap" rel="stylesheet")
+	link(href="https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap" rel="stylesheet")
 	link(href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet")
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js")
 	
