--- a/app/scss/import/_header.scss
+++ b/app/scss/import/_header.scss
@@ -1,3 +1,66 @@
 .header{
+    min-height: 80px;
+    height: auto;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 5px 5px #0000001A;
+    opacity: 1;
 
 }
+
+.header__nav{
+   
+    
+    
+}
+
+.header-navbar{
+    
+    
+}
+
+.header-navbar-ul{
+    @extend %marginUl;
+}
+
+.header-navbar-ul__li{
+    display:inline-block;
+    font-size: 16px;
+    display: inline-block;
+    padding:8px 15px 8px 0px;
+   
+}
+
+.header-navbar-ul__li_a-text-style{
+    @extend %nullLink;
+    color:#7E7E7E ;
+    font-weight: bold;
+    font-family: $Raleway;
+    font-size: 16px;
+
+    
+}
+
+.header-btn__login{
+    width: 139px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: $Raleway;
+    color: #7E7E7E;
+    text-decoration: underline;
+    background: rgba(255, 255, 255, 0);
+}
+
+.header-btn__sign{
+    width: 139px;
+    height: 40px;
+    background: transparent linear-gradient(270deg, #00B5FF 0%, #0073B9 100%) 0% 0% no-repeat padding-box;
+    box-shadow: 0px 4px 8px #00000033;
+    border-radius: 8px;
+    opacity: 1;
+    color:#FFFFFF;
+    font-size: 14px;
+    font-family: $Raleway;
+    font-weight: bold;
+}
+
